Updated website content

--- a/404.html
+++ b/404.html
@@ -1,7 +1,9 @@
 ---
+layout: default
+title: Page not found
 permalink: /404.html
-layout: page
 ---
+
 
 <style type="text/css" media="screen">
   .container {
