--- a/welcome.html
+++ b/welcome.html
@@ -1,26 +1,66 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>welcome</title>
+  <title>Welcome – Tianyu Cheng</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="/assets/css/style.css">
+  <meta name="description" content="Welcome page for Tianyu Cheng – Postdoctoral Researcher in Applied Mathematics at York University.">
 </head>
+
 <body>
   <div class="container">
     <header class="site-header">
-      <h1>Tao Gong</h1>
+      <h1>Tianyu Cheng</h1>
       <nav class="site-nav">
         <a href="#about">About</a>
-        <a href="#papers">Papers</a>
+        <a href="#research">Research</a>
         <a href="#contact">Contact</a>
       </nav>
     </header>
 
     <main class="page-content">
-      <h1 id="something">Something</h1>
 
-<p>I am a PhD student under the supervision of Matthias Franz at the University of Western Ontario in Canada. Before that I got the Bachelor’s and Master’s degrees under the supervision of Xu’an Zhao at Beijing Normal University in China.</p>
+      <!-- ABOUT SECTION -->
+      <section id="about">
+        <h2>About Me</h2>
+        <p>
+          I am a Postdoctoral Researcher under the supervision of
+          <strong>Prof. Jianhong Wu</strong> at <strong>York University</strong>, Canada.
+          I received my Ph.D. in Applied Mathematics from the
+          <strong>University of Western Ontario</strong>, working with
+          <strong>Prof. Xingfu Zou</strong>.
+        </p>
+        <p>
+          My research interests include:
+        </p>
+        <ul>
+          <li>Mathematical biology</li>
+          <li>Infectious disease modelling</li>
+          <li>Dynamical systems</li>
+          <li>Delay differential equations</li>
+        </ul>
+      </section>
+
+      <!-- RESEARCH SECTION -->
+      <section id="research">
+        <h2>Recent Work</h2>
+        <p>
+          My work explores the mathematical foundations and applications of
+          nonlinear dynamics in epidemiology. I study mathematical structures
+          behind transmission dynamics, stability phenomena, bifurcations in
+          delay systems, and mechanisms that drive disease persistence or elimination.
+        </p>
+      </section>
+
+      <!-- CONTACT SECTION -->
+      <section id="contact">
+        <h2>Contact</h2>
+        <p>Email:
+          <a href="mailto:tianyu45@yorku.ca">tianyu45@yorku.ca</a>,
+          <a href="mailto:tchen454@uwo.ca">tchen454@uwo.ca</a>
+        </p>
+      </section>
 
     </main>
   </div>
